@@ -1,3 +1,8 @@
+2004-10-31  Shiro Kawai  <shiro@acm.org>
+
+	* test/spvr-httpd.scm.in : added for testing stand-alone httpd mode
+	  of kahua-spvr.
+
 2004-10-19  Shiro Kawai  <shiro@acm.org>
 
 	* src/kahua/server.scm (kahua-context-ref*): added kahua-context-ref*
